# 2134567890

./: .gitignore  CMakeLists.txt  README.md
album/: .env.example  README.md  db.sql  index.html  package.json  script.js  server.js  styles.css
data/: certificate_template.txt  recipients.csv
include/: CertificateGenerator.h
src/: CertificateGenerator.cpp  main.cpp
styles/: classic.txt  modern.txt
